[package]
name = "calliope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
tera = "1.15.0"
sqlx = { version = "0.5.13", features = [ "runtime-tokio-rustls"] }
pulldown-cmark = "0.9.1"
ammonia = "3"