[package]
name = "calliope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
tera = "1"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1", features = ["full"] }
pulldown-cmark = "0.9.1"
ammonia = "3"
rust-argon2 = "1.0.0"
rand = { version = "0.8", features = [ "std_rng" ] }
log = "0.4"